--- a/Info.html
+++ b/Info.html
@@ -16,7 +16,7 @@
        <nav>
            <ul>
                <li><a href="/">Startseite</a></li>
-               <li><a href="/über.html">Über uns</a></li>
+               <li><a href="über.html">Über uns</a></li>
                <li class="active"><a href="Info.html">Info-Bereiche</a></li>
                <li><a href="kontakten.html">Kontakten</a></li>
            </ul>
