--- a/Info.html
+++ b/Info.html
@@ -15,7 +15,7 @@
        <span class="logo">LOGO</span>
        <nav>
            <ul>
-               <li><a href="/">Startseite</a></li>
+               <li><a href="index.html">Startseite</a></li>
                <li><a href="über.html">Über uns</a></li>
                <li class="active"><a href="Info.html">Info-Bereiche</a></li>
                <li><a href="kontakten.html">Kontakten</a></li>
