--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <span class="logo">LOGO</span>
     <nav>
         <ul>
-            <li class="active"><a href="index.html">Startseite</a></li>
+            <li class="active"><a href="/">Startseite</a></li>
             <li><a href="über.html">Über uns</a></li>
             <li><a href="Info.html">Info-Bereiche</a></li>
             <li><a href="Kontakten.html">Kontakten</a></li>
